schema/testdata/validation_expression_enum_set_operator_mismatch/schema.keel
model Post {
  fields {
    status PostStatus
  }

  operations {
    update published(id) {
      @set(post.status = OtherPostStatus.Something)
    }
  }
}

enum PostStatus {
  Published
  Draft
}

enum OtherPostStatus {
  Something
  Else
}
