schema/testdata/errors/expression_enum_set_operator_mismatch.keel
model Post {
    fields {
        status PostStatus
    }

    actions {
        update published(id) {
            //expect-error:32:57:AttributeExpressionError:expression expected to resolve to type PostStatus but it is OtherPostStatus
            @set(post.status = OtherPostStatus.Something)
        }
    }
}

enum PostStatus {
    Published
    Draft
}

enum OtherPostStatus {
    Something
    Else
}
